--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,19 @@ body{
     
      
     font-family:Helvetica ;
+    padding-bottom: 10px;
     
 }
 
+hr{
+
+    width:5%;
+    border-top:2px dotted #a5b2b2;
+}
+
+
+
+        
 
 h1{
     margin-top: 40px;
@@ -71,8 +81,56 @@ p{
 
 .devimg2{
 
-    float:left;
-    margin-right: 30PX;
+    float:right;
+    margin-left: 30PX;
+    
 }
 
+
     
+
+.btn {
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    margin-bottom: 30px;
+    margin-top: 20px;
+    
+  }
+  
+  .btn:hover {
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
+  }
+  .bottom-container{
+
+    margin-top: 30px;
+    background-color: #66BFBF;
+    padding-bottom: 30px;
+    padding-top: 40px;
+  }
+
+  #lp{
+    margin-bottom: 0px;
+    color: #EAF6F6;
+  }
+  #lp1{
+
+    margin-bottom: 30px;
+  }
