--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body{
     
 }
 
+
 hr{
 
     width:5%;
@@ -97,6 +98,60 @@ a:hover{
     float:right;
     margin-left: 30PX;
     
+}
+.container {
+    max-width: 50%;
+    margin-inline: auto;
+  }
+  .section-skills{
+    margin:0px auto;
+    max-width: 60%;
+  }
+
+
+.s-container{
+    margin:0px auto;
+}
+
+/* *-----------------------------------*\ */
+  #SKILLS
+/* \*-----------------------------------*/ */
+
+.skills .section-title { margin-block-end: 20px; }
+
+.skills .section-text { margin-block-end: 70px; }
+
+.skills-list {
+  display: grid;
+  gap: 25px;
+  list-style-type: none ;
+}
+
+.skills-item .wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-block-end: 10px;
+}
+
+.skills-title,
+.skills-data {
+  color: var(--white);
+  font-size: var(--fs-5);
+  font-family: var(--ff-barlow);
+  font-weight: var(--fw-600);
+}
+
+.skills-progress-box {
+  background-color: var(--white);
+  height: 8px;
+  border-radius: var(--radius-10);
+}
+
+.skills-progress {
+  background-color: #00304e;
+  height: 100%;
+  border-radius: inherit;
 }
 
 
