--- a/style.css
+++ b/style.css
@@ -4,7 +4,12 @@ body{
     margin: 0px;
     text-align: center;
     
-    
+ 
+}
+
+.container-fluid{
+
+  padding:1% 4% 7%;
 }
 
 .top-container{
@@ -13,13 +18,42 @@ body{
     
      
     font-family:Helvetica ;
+    padding-bottom: 10px;
     
+}
+.navbar-brand{
+
+  font-family: "Ubuntu";
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 
+hr{
+
+    width:5%;
+    border-top:5px dotted #a5b2b2;
+    margin:70px auto;
+}
+p{
+    width:40%;
+    margin:30px auto;
+    line-height: 2;
+    
+}
+
+h1,h2,h3,h4,h5,p {
+  text-align: center;
+}
+
+
+
+        
+
 h1{
-    margin-top: 40px;
-    padding-top: 30px;
+    
+    
+    padding-top: 10px;
     margin:0px auto 20px auto;
     
     font-size: 4.62rem;
@@ -30,7 +64,7 @@ h1{
 }
 h2{
     margin:0px auto;
-    width:30%;
+    width:50%;
     color: #66BFBF;
     
     font-family: 'Roboto', sans-serif;
@@ -55,6 +89,14 @@ p{
     size: 2.5rem;
 }
 
+a{
+    
+    text-decoration: none;
+}
+a:hover{
+    color:#023233;
+}
+
 .skill-row{
 
     width:50%;
@@ -71,8 +113,140 @@ p{
 
 .devimg2{
 
-    float:left;
-    margin-right: 30PX;
+    float:right;
+    margin-left: 30PX;
+    
+}
+.container {
+    max-width: 50%;
+    margin-inline: auto;
+  }
+  .section-skills{
+    margin:0px auto;
+    max-width: 60%;
+  }
+
+
+.s-container{
+    margin:0px auto;
 }
 
+/* *-----------------------------------*\ */
+  #SKILLS
+/* \*-----------------------------------*/ */
+
+.skills .section-title { margin-block-end: 20px; }
+
+.skills .section-text { margin-block-end: 70px; }
+
+.skills-list {
+  display: grid;
+  gap: 25px;
+  list-style-type: none ;
+}
+
+.skills-item .wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-block-end: 10px;
+}
+
+.skills-title,
+.skills-data {
+  color: var(--white);
+  font-size: var(--fs-5);
+  font-family: var(--ff-barlow);
+  font-weight: var(--fw-600);
+}
+
+.skills-progress-box {
+  background-color: var(--white);
+  height: 8px;
+  border-radius: var(--radius-10);
+}
+
+.skills-progress {
+  background-color: #00304e;
+  height: 100%;
+  border-radius: inherit;
+}
+
+
     
+.btn {
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    -webkit-border-radius: 31;
+    -moz-border-radius: 31;
+    border-radius: 31px;
+    font-family: 'Roboto', sans-serif;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
+  }
+  .bottom-container{
+
+    margin-top: 30px;
+    background-color: #66BFBF;
+    padding-bottom: 30px;
+    padding-top: 40px;
+    font-family: 'Roboto', sans-serif;
+    color:#11999E;
+  }
+
+  #lp{
+    margin-bottom: 0px;
+    color: #EAF6F6;
+  }
+  #lp1{
+
+    margin-bottom: 30px;
+  }
+
+  .contact-me{
+    text-align: center;
+    font-family: "Ubuntu";
+  }
+
+  .bottom-container{
+    text-align: center;
+  }
+
+  .bottom-container .footer-link{
+
+    padding:20px;
+    text-decoration:none;
+    color:#023233
+   
+
+  }
+
+  /* TYped
+   */
+  
+   .multitext{
+    display:inline;
+   }
+
+   .typed-cursor{
+    font-size: 40px;
+    opacity: 2;
+    color:#11999E;
+    
+}
